--- a/main.html
+++ b/main.html
@@ -8,6 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav role="navigation" class="navbar">
+        <ul role="list">
+            <li role="listitem"><a href="#home">Home</a></li>
+            <li role="listitem"><a href="#projects">Projects</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Portfolio Header -->
+    <header>
+        <h1 role="heading">Welcome to My Accessible Portfolio</h1>
+    </header>
+
+    <!-- Image Section -->
+    <section class="profile">
+        <img role="img" src="https://via.placeholder.com/300x200" alt="Portrait of the portfolio owner smiling" />
+        <p>Hello! I’m an aspiring web developer passionate about creating user-friendly and accessible websites for everyone.</p>
+    </section>
+
+    <!-- Skills List -->
+    <section>
+        <h2 role="heading">My Skills</h2>
+        <ul role="list">
+            <li role="listitem">HTML & ARIA Accessibility</li>
+            <li role="listitem">CSS & Responsive Design</li>
+            <li role="listitem">JavaScript & Web Interactivity</li>
+        </ul>
+    </section>
     <script type="text/javascript" src="./script.js">
 </script>
 
